QmidiCtl - A MIDI Remote Controller via UDP/IP Multicast
--------------------------------------------------------

ChangeLog


0.4.2  2016-11-14  A Fall'16 release.

- Almost complete overhaul on the configure script command
  line options, wrt. installation directories specification,
  eg. --prefix, --bindir, --libdir, --datadir and --mandir.


0.4.1  2016-09-14  End of Summer'16 release.

- Dropped the --enable-qt5 from configure as found redundant
  given that's the build default anyway (suggestion by Guido
  Scholz, while for Qtractor, thanks).


0.4.0  2016-04-05  Spring'16 release frenzy.

- Added application keywords to freedesktop.org's AppData.


0.3.0  2015-09-21  Summer'15 release frenzy.

- Prefer Qt5 over Qt4 by default with configure script.

- Complete rewrite of Qt4 vs. Qt5 configure builds.

- Fixed for some strict tests for Qt4 vs. Qt5 configure builds.


0.2.0  2015-03-23  Pre-LAC2015 pre-season release.

- Reset (to network defaults) button added to options dialog,
  which also gets some layout reform.

- Added application description as freedesktop.org's AppData.

- Previously hard-coded UDP/IP multicast address (225.0.0.37) is
  now an user configurable option.

- A man page has beed added.

- Allow the build system to include an user specified LDFLAGS.


0.1.1  2013-12-31  A fifth of a Jubilee.

- More preparations for Qt5 configure build.

- Preparations for Qt5 migration.

- Make(ing) -jN parallel builds now available for the masses.

- Fixed Makefile.in handling of installation directories to the
  configure script eg. --datadir.

- Symbian^3 port (by Pedro Lopez-Cabanillas).

- Added translatable macro contextualizers.


0.1.0  2010-09-03  Second public release.

- Standard desktop icon fixing (Fremantle/Hildon).

- MIDI note and controller names (GM) added.

- Logarithmic scale configure option added.

- Message box title confidence fix (whatever it be:)

- MIDI controller assignment, any other than mostly MMC, is now