@@ -957,7 +957,13 @@ void qmidictlMainForm::aboutSlot (void)
 	sText += "<b>" QMIDICTL_TITLE " - " + tr(QMIDICTL_SUBTITLE) + "</b><br />\n";
 	sText += "<br />\n";
 	sText += tr("Version") + ": <b>" CONFIG_BUILD_VERSION "</b><br />\n";
-	sText += "<small>" + tr("Build") + ": " CONFIG_BUILD_DATE "</small><br />\n";
+//	sText += "<small>" + tr("Build") + ": " CONFIG_BUILD_DATE "</small><br />\n";
+#ifdef CONFIG_DEBUG
+	sText += "<br />\n";
+	sText += "<small><font color=\"red\">";
+	sText += tr("Debugging option enabled.");
+	sText += "</font></small><br />\n";
+#endif
 	sText += "<br />\n";
 	sText += tr("Website") + ": <a href=\"" QMIDICTL_WEBSITE "\">" QMIDICTL_WEBSITE "</a><br />\n";
 	sText += "<br />\n";
